# dicomtrolleytool

./: .pre-commit-config.yaml  HISTORY.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
dicomtrolleytool/: channels.py  connections.py  exceptions.py  logging.py  logs.py  operations.py  persistence.py  query.py
dicomtrolleytool/cli/: base.py  channel.py  cli_core.py  click_parameter_types.py  download.py  entrypoint.py  output.py  query.py
examples/: perform_cfind_query.py  perform_query.py  persist_connection.py  read_persisted_connection.py
tests/: conftest.py  factories.py  test_channels.py  test_cli.py  test_cli_channel.py  test_cli_download.py  test_cli_output.py  test_cli_query.py  test_connections.py  test_persistence.py  test_query.py
