[tool.poetry]
name = "dicomtrolleytool"
version = "0.1.0"
description = "Command line tool for dicom query and download"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
