[tool.poetry]
name = "dicomtrolleytool"
version = "0.3.0"
description = "Command line tool for dicom query and download"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
keyring = "^23.9.3"
pydantic = "^1.8.0"
dicomtrolley = "^2.1.4"
PyYAML = "^6.0"
click = "^8.1.3"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.scripts]
dtool = "dicomtrolleytool.cli.entrypoint:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
